--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -13,8 +13,8 @@
   border-bottom: 1px solid rgb(232, 231, 230);
 }
 
-.tokenNameCol {
-  width: 20%;
+.fixedCol {
+  width: 18%;
 }
 
 .tokenName {
